--- a/create.html
+++ b/create.html
@@ -6,28 +6,44 @@
     <title><%= title %></title>
     <link rel="icon" type="image/png" href="https://icons.iconarchive.com/icons/microsoft/fluentui-emoji-flat/128/Sparkles-Flat-icon.png" />
     <link rel="stylesheet" href="/styles.css" />
+    <script src="https://cdn.tiny.cloud/1/sfosaajpji49wbe5gat9vnutd1flushxqcmuns4m9u0kvkv0/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
     <nav class="flex-container">
         <div class="left">
-            <a href="/">Nuggets of Positivity</a>
+            <a href="/index.html">Nuggets of Positivity</a>
         </div>
         <div class="right">
-            <a href="/about">About</a>
-            <a href="/create">Create a Nugget</a>
-            <a href="/login">Login</a>
+            <a href="/about.html">About</a>
+            <a href="/create.html">Create a Nugget</a>
         </div>
     </nav>
     <div class="heading">
         <center>
             <h1>
-                Create a Nugget of Positivity!
+                Create Your Nugget of Positivity!
             </h1>
             <form action="/" method="POST">
-                <label for="nugget">Nugget:</label>
+                <label for="name">Name: </label>
+                <input name="name" />
+                <label for="nugget">Nugget: </label>
+                <textarea name="nugget" id="nuggetcontents"></textarea>
             </form>
         </center>
     </div>
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+          selector: 'textarea',
+          plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage advtemplate ai mentions tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
+          toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+          tinycomments_mode: 'embedded',
+          tinycomments_author: 'Author name',
+          mergetags_list: [
+            { value: 'First.Name', title: 'First Name' },
+            { value: 'Email', title: 'Email' },
+          ],
+          ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
+        });
+      </script>
 </body>
 </html>
