--- a/about.html
+++ b/about.html
@@ -10,12 +10,11 @@
 <body>
     <nav class="flex-container">
         <div class="left">
-            <a href="/">Nuggets of Positivity</a>
+            <a href="/index.html">Nuggets of Positivity</a>
         </div>
         <div class="right">
-            <a href="/about">About</a>
-            <a href="/create">Create a Nugget</a>
-            <a href="/login">Login</a>
+            <a href="/about.html">About</a>
+            <a href="/create.html">Create a Nugget</a>
         </div>
     </nav>
     <div class="heading">
