Update nugget create page (again)

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>404 Nugget</title>
     <link rel="icon" type="image/png" href="https://icons.iconarchive.com/icons/microsoft/fluentui-emoji-flat/128/Sparkles-Flat-icon.png" />
     <link rel="stylesheet" href="/styles.css" />
 </head>
@@ -22,6 +22,7 @@
             <h1>
                 Don't stray too far from positivity!
             </h1>
+            <img src="./goldnugget.png" alt="gold nugget"/>
         </center>
     </div>
 </body>
