--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>About</title>
     <link rel="icon" type="image/png" href="https://icons.iconarchive.com/icons/microsoft/fluentui-emoji-flat/128/Sparkles-Flat-icon.png" />
     <link rel="stylesheet" href="/styles.css" />
 </head>
