--- a/create.html
+++ b/create.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Create</title>
     <link rel="icon" type="image/png" href="https://icons.iconarchive.com/icons/microsoft/fluentui-emoji-flat/128/Sparkles-Flat-icon.png" />
     <link rel="stylesheet" href="/styles.css" />
     <script src="https://cdn.tiny.cloud/1/sfosaajpji49wbe5gat9vnutd1flushxqcmuns4m9u0kvkv0/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
@@ -23,13 +23,28 @@
             <h1>
                 Create Your Nugget of Positivity!
             </h1>
-            <form action="/" method="POST">
-                <label for="name">Name: </label>
-                <input name="name" />
-                <label for="nugget">Nugget: </label>
-                <textarea name="nugget" id="nuggetcontents"></textarea>
-            </form>
         </center>
+        <form>
+            <label for="name">Name:     </label>
+            <input type="text" name="name" id="name" required />
+            <div class="spacer"></div>
+            <label for="nugget">Nugget: </label>
+            <div class="text-container">
+                <textarea name="nugget" id="nuggetcontents" required></textarea>
+            </div>
+            <center>
+                <button class="submit">Send!</button>
+            </center>
+            <br>
+            <hr>
+            <br>
+            <center>
+                <div id="nuggetposts" width="50%">
+                    <p>Happy Pi Day! ~ KitKat</p>
+                    <p>May good fortune find you ~ Anonymous</p>
+                </div>
+            </center>
+        </form>
     </div>
     <script>
         tinymce.init({
@@ -43,6 +58,14 @@
             { value: 'Email', title: 'Email' },
           ],
           ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
+        });
+
+        const post = document.querySelector('button.submit');
+        post.addEventListener((e) => {
+            alert();
+            let nugget = document.createElement("p");
+            nugget.innerText = document.getElementById('nuggetcontents').value + " ~ " + document.getElementById('name').value;
+            document.getElementById("nuggetposts").addChild(nugget);
         });
       </script>
 </body>
