Format about page

--- a/about.html
+++ b/about.html
@@ -26,14 +26,15 @@
                 The happiest place in the world
             </h5>
         </center>
-        <div>
-            <p>Nuggets of Positivity was created to encourage smiles and laughter! 
+        <div class="about">
+            <br>
+            <p>Nuggets of Positivity was created to encourage <span style="color:gold">smiles</span> and <span style="color:gold">laughter</span>! 
                 The mind is a deep ocean of thoughts, and oftentimes, people become 
                 entrenched in negative thoughts and self-deprecation unknowingly. 
                 This spiral into unhappiness spurred by the constant reminders of our 
                 shortcomings is detrimental to our overall well-being. With Nuggets of 
-                Positivity, people from all over are encouraged to share quick, uplifting 
-                statements to help brighten a stranger's day.
+                Positivity, people from all over are encouraged to share <span style="color:gold">quick, uplifting 
+                    statements</span> to help <span style="color:gold">brighten a stranger's day</span>.
             </p>
         </div>
     </div>
