--- a/create.html
+++ b/create.html
@@ -29,6 +29,7 @@
             <input type=text name="name" id="name" required />
             <div class="spacer"></div>
             <label for="nuggetcontents">Nugget: </label>
+            <div class="spacer"></div>
             <div class="text-container">
                 <textarea type=text name="nuggetcontents" id="nuggetcontents" required></textarea>
             </div>
